--- a/music_player.ioc
+++ b/music_player.ioc
@@ -98,12 +98,21 @@ PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=SDCARD CS
 PA4.Locked=true
 PA4.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Speed,GPIO_Mode
+PA5.GPIO_Mode=GPIO_MODE_AF_PP
+PA5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA5.Locked=true
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA6.GPIO_Mode=GPIO_MODE_AF_PP
+PA6.GPIO_PuPd=GPIO_NOPULL
+PA6.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA6.Locked=true
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
+PA7.GPIOParameters=GPIO_Speed
+PA7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
@@ -210,13 +219,15 @@ RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI1.CLKPhase=SPI_PHASE_1EDGE
+SPI1.CLKPolarity=SPI_POLARITY_LOW
 SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
 SPI1.CalculateBaudRate=375.0 KBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize,CRCCalculation,NSSPMode
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize,CRCCalculation,CLKPolarity,CLKPhase,NSSPMode
 SPI1.Mode=SPI_MODE_MASTER
-SPI1.NSSPMode=SPI_NSS_PULSE_ENABLE
+SPI1.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI1.VirtualType=VM_MASTER
 TIM14.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM14.IPParameters=Prescaler,Period,AutoReloadPreload
