--- a/music_player.ioc
+++ b/music_player.ioc
@@ -8,31 +8,26 @@ Mcu.IP2=RTC
 Mcu.IP3=SPI1
 Mcu.IP4=SYS
 Mcu.IP5=TIM14
-Mcu.IPNb=6
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F042K(4-6)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PF1-OSC_OUT
-Mcu.Pin10=PB0
-Mcu.Pin11=PB1
-Mcu.Pin12=PA8
-Mcu.Pin13=PA9
-Mcu.Pin14=PA10
-Mcu.Pin15=PA11
-Mcu.Pin16=PA12
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
-Mcu.Pin19=PA15
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA11
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PA15
+Mcu.Pin16=PB3
+Mcu.Pin17=PB4
+Mcu.Pin18=PB5
+Mcu.Pin19=PB6
 Mcu.Pin2=PA0
-Mcu.Pin20=PB3
-Mcu.Pin21=PB4
-Mcu.Pin22=PB5
-Mcu.Pin23=PB6
-Mcu.Pin24=PB7
-Mcu.Pin25=PB8
-Mcu.Pin26=VP_RTC_VS_RTC_Activate
-Mcu.Pin27=VP_SYS_VS_Systick
-Mcu.Pin28=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin20=VP_RTC_VS_RTC_Activate
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM14_VS_ClockSourceINT
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -40,7 +35,7 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=29
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042K6Tx
@@ -52,28 +47,25 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-PA0.GPIOParameters=GPIO_Label
+PA0.GPIOParameters=PinState,GPIO_Label
 PA0.GPIO_Label=AUDIO RESET
 PA0.Locked=true
+PA0.PinState=GPIO_PIN_RESET
 PA0.Signal=GPIO_Output
-PA1.GPIOParameters=GPIO_Label
+PA1.GPIOParameters=PinState,GPIO_Label
 PA1.GPIO_Label=XDCS
 PA1.Locked=true
+PA1.PinState=GPIO_PIN_SET
 PA1.Signal=GPIO_Output
-PA10.GPIOParameters=GPIO_PuPd
-PA10.GPIO_PuPd=GPIO_PULLDOWN
 PA10.Locked=true
-PA10.Signal=GPIO_Input
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA11.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PA11.GPIO_Label=LED
 PA11.GPIO_PuPd=GPIO_PULLUP
 PA11.Locked=true
 PA11.PinState=GPIO_PIN_SET
 PA11.Signal=GPIO_Output
-PA12.GPIOParameters=GPIO_PuPd
-PA12.GPIO_PuPd=GPIO_PULLDOWN
-PA12.Locked=true
-PA12.Signal=GPIO_Input
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=SWDIO
 PA13.Locked=true
@@ -86,17 +78,19 @@ PA15.GPIOParameters=GPIO_Label
 PA15.GPIO_Label=SW UP
 PA15.Locked=true
 PA15.Signal=GPIO_Input
-PA2.GPIOParameters=GPIO_Label
+PA2.GPIOParameters=PinState,GPIO_Label
 PA2.GPIO_Label=XCS
 PA2.Locked=true
+PA2.PinState=GPIO_PIN_SET
 PA2.Signal=GPIO_Output
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=DREQ
 PA3.Locked=true
-PA3.Signal=GPIO_Output
-PA4.GPIOParameters=GPIO_Label
+PA3.Signal=GPIO_Input
+PA4.GPIOParameters=PinState,GPIO_Label
 PA4.GPIO_Label=SDCARD CS
 PA4.Locked=true
+PA4.PinState=GPIO_PIN_SET
 PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Speed,GPIO_Mode
 PA5.GPIO_Mode=GPIO_MODE_AF_PP
@@ -116,22 +110,9 @@ PA7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PA8.GPIOParameters=GPIO_PuPd
-PA8.GPIO_PuPd=GPIO_PULLDOWN
-PA8.Locked=true
-PA8.Signal=GPIO_Input
-PA9.GPIOParameters=GPIO_PuPd
-PA9.GPIO_PuPd=GPIO_PULLDOWN
 PA9.Locked=true
-PA9.Signal=GPIO_Input
-PB0.GPIOParameters=GPIO_PuPd
-PB0.GPIO_PuPd=GPIO_PULLDOWN
-PB0.Locked=true
-PB0.Signal=GPIO_Input
-PB1.GPIOParameters=GPIO_PuPd
-PB1.GPIO_PuPd=GPIO_PULLDOWN
-PB1.Locked=true
-PB1.Signal=GPIO_Input
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SW DOWN
 PB3.Locked=true
@@ -148,10 +129,6 @@ PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=SW PLAY/PAUSE
 PB6.Locked=true
 PB6.Signal=GPIO_Input
-PB7.Locked=true
-PB7.Signal=GPIO_Input
-PB8.Locked=true
-PB8.Signal=GPIO_Input
 PCC.Checker=false
 PCC.Line=STM32F0x2
 PCC.MCU=STM32F042K(4-6)Tx
@@ -169,7 +146,7 @@ PF1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
-ProjectManager.CompilerOptimize=3
+ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
@@ -191,13 +168,9 @@ ProjectManager.ProjectFileName=music_player.ioc
 ProjectManager.ProjectName=music_player
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
-ProjectManager.TemplateDestinationPath=C\:\\Users\\hogehogei\\Desktop\\music_player\\music_player
-ProjectManager.TemplateSourcePath=C\:\\Program Files\\STMicroelectronics\\STM32Cube\\STM32CubeMX\\db\\extra_templates
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.UseDefaultDestinationPath=true
-ProjectManager.UseDefaultSourcePath=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_TIM14_Init-TIM14-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM14_Init-TIM14-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -233,6 +206,9 @@ TIM14.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM14.IPParameters=Prescaler,Period,AutoReloadPreload
 TIM14.Period=1000
 TIM14.Prescaler=48
+USART1.BaudRate=9600
+USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
+USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_Systick.Mode=SysTick
